UCL-496 fix jumping multiselect input

--- a/src/components/DataGrid/DataGridFilters/DataGridFilter.module.scss
+++ b/src/components/DataGrid/DataGridFilters/DataGridFilter.module.scss
@@ -84,8 +84,7 @@
     display: flex;
     gap: 1rem;
 
-    & > *:last-child,
-    *:first-child {
+    & > *:first-child {
       flex-grow: 1.8;
       flex-shrink: 0;
       margin-top: 0;
@@ -93,6 +92,13 @@
 
     & > *:nth-child(2) {
       flex-grow: 1;
+      flex-shrink: 0;
+      margin-top: 0;
+    }
+
+    & > *:last-child {
+      flex-basis: 15rem;
+      flex-grow: 1.8;
       flex-shrink: 0;
       margin-top: 0;
     }
